[package]
name = "bull-bitcoin-export-fix"
version = "1.0.0"
authors = ["Steven Black <steveb@stevenblack.com>"]
description = """
Bull Bitcoin offers a comically inflexible "Export my orders" button that gives you a so-called .csv file that has intractable problems. Bull Bitcoin support has declined written suggestions to make their data more interoperative. This repo contains the code I use to transform their garbage data into a format I import into a spreadsheet. In other words, this repo takes shitty data and makes a usable .csv file I can actually use.
"""
homepage = "https://github.com/StevenBlack/bull-bitcoin-export-fix"
repository = "https://github.com/StevenBlack/bull-bitcoin-export-fix"
keywords = ["rust", "canada", "csv-parser", "remediation", "tax-compliance", "bull-bitcoin", "remediation"]
categories = ["command-line-utilities", "text-processing", "csv"]
license = "MIT"
edition = "2021"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
